# app/Http/Controllers/Mobile_api/Swagger_controller.php
@@ -36,6 +36,8 @@ class Swagger_controller extends Controller
        
     }
 
+    use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
+
        
     /**
      * @OA\Info(
