# storage/api-docs/api-docs.json
@@ -102,20 +102,21 @@
             "bearerAuth": {
                 "type": "http",
                 "scheme": "bearer"
-            },
-            "passport": {
-                "type": "apiKey",
-                "description": "Laravel passport oauth2 security.",
-                "in": "header",
-                "name": "autherization",
-                "scheme": "https",
-                "flows": {
-                    "password": {
-                        "authorizationUrl": "http://localhost/oauth/authorize",
-                        "tokenUrl": "http://localhost/oauth/token",
-                        "refreshUrl": "http://localhost/token/refresh",
-                        "scopes": []
-                    }
+            }
+        }
+    },
+    "security": {
+        "passport": {
+            "type": "oauth2",
+            "description": "Laravel passport oauth2 security.",
+            "in": "header",
+            "scheme": "https",
+            "flows": {
+                "password": {
+                    "authorizationUrl": "http://localhost/oauth/authorize",
+                    "tokenUrl": "http://localhost/oauth/token",
+                    "refreshUrl": "http://localhost/token/refresh",
+                    "scopes": []
                 }
             }
         }
